# cpp17

./: LICENSE  README.md
ATourOfCpp2e/: README.md
ATourOfCpp2e/chapter1/: a  compile.sh
ATourOfCpp2e/chapter1/src/: main.cpp
ATourOfCpp2e/chapter2/: a  compile.sh
ATourOfCpp2e/chapter2/src/: main.cpp  udts.cpp  udts.h  udts.hpp
ATourOfCpp2e/chapter3/: a  compile.sh
ATourOfCpp2e/chapter3/src/: main.cpp  udts.cpp  udts.h  udts2.cpp  udts2.h
ATourOfCpp2e/chapter4/: a  compile.sh
ATourOfCpp2e/chapter4/src/: main.cpp  udts.cpp  udts.h
CGAL-5.0.3/: README.md
CGAL-5.0.3/mesh_3/: CMakeLists.txt
CGAL-5.0.3/mesh_3/src/: main.cpp
CGAL-5.0.3/mesh_3D/: README.md  start.sh
CGAL-5.0.3/mesh_3D/src/: main.cpp  main.py
CGAL-5.0.3/mesh_3D/src/data/: out_CGAL.off  out_Open3D.off
CGAL-5.0.3/open3d/: README.md  off.py  stl.py
CGAL-5.0.3/point_cloud_3/: README.md
CGAL-5.0.3/point_cloud_3/src/: main.cpp  main.py
CGAL-5.0.3/point_cloud_3/src/data/: oni_CGAL.xyz  oni_Open3D.xyz
CGAL-5.0.3/point_cloud_3D/: CMakeLists.txt  cmakecompile.sh
CGAL-5.0.3/point_cloud_3D/src/: main.py
CGAL-5.0.3/points_and_segments/: CMakeLists.txt  cmakecompile.sh
CGAL-5.0.3/points_and_segments/src/: main.cpp
CGAL-5.0.3/surface_reconstruction/: CMakeLists.txt  README.md  cmakecompile.sh
CGAL-5.0.3/surface_reconstruction/src/: main.cpp  main.py  obj.py  xyz.py
CGAL-5.0.3/surface_reconstruction/src/data/: atoms.xyz  atoms_CGAL.off  half.xyz  half_CGAL.off
CtCi/VII/linked-lists/: main.cpp
CtCi/VII/stl-containers/: adaptors.cpp  associative.cpp  sequence.cpp
CtCi/VII/trees-graphs/: main.cpp
MPI/: README.md
MPI/hello/: compile.sh
MPI/hello/src/: main.cpp
Parallel-Cpp-MPI-OpenMP/: README.md
Parallel-Cpp-MPI-OpenMP/chapter2Cpp/: README.md  compile.sh
Parallel-Cpp-MPI-OpenMP/chapter2Cpp/src/: main.cpp
Parallel-Cpp-MPI-OpenMP/chapter2GramSchmidt/: CMakeLists.txt  README.md
Parallel-Cpp-MPI-OpenMP/chapter2GramSchmidt/src/: GramSchmidt.cpp  GramSchmidt.h  main.cpp
Parallel-Cpp-MPI-OpenMP/chapter3NewtRecAlgo/: CMakeLists.txt  README.md
Parallel-Cpp-MPI-OpenMP/chapter3NewtRecAlgo/src/: main.cpp  plt.gp
STH/: 13-carr-fun.cpp  15-pass-by.cpp  16-palindrome.cpp  52-classes.cpp
project_euler/: p1.cpp  p2.cpp  p4.cpp  p5.cpp  p6.cpp  p7.cpp
test/: README.md  a  compile.sh
test/src/: main.cpp
testcmake/: CMakeLists.txt  Makefile  README.md  compile.sh
testcmake/src/: include.cpp
testgprof/: CMakeLists.txt  README.md  cmakecompile.sh
testgprof/include/: include.h
testgprof/src/: include.cpp  main.cpp
testmake/: Makefile  Makefile.1  Makefile.2  README.md  hello.cpp  include.h  main.cpp
tricks/00-static-and-reference/: a  compile.sh
tricks/00-static-and-reference/src/: main.cpp
tricks/01-cosorting/: a  compile.sh
tricks/01-cosorting/src/: main-cpp11-vector.cpp  main-cpp17.cpp  main.cpp
