cmake_minimum_required(VERSION 3.5.1)
project(NewtRecAlgo)
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_STANDARD 11)
set(TARGET main)
include_directories(include)
link_directories(lib)
file(GLOB SRCS src/*.cpp)
add_executable(${TARGET} ${SRCS})
# target_link_libraries(${TARGET} blas)
# target_link_libraries(${TARGET} lapacke)